# devops-ai-k8s-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  ai_client.py  config.py  k8s_client.py  main.py  masking.py  metrics.py  models.py  rule_engine.py  scanner.py  storage.py
app/static/: app.js  style.css
app/templates/: dashboard.html
demo/: ai-analysis-demo.yaml  bad-config-demo.yaml  crashloop-demo.yaml  crashloop-demo1.yaml  imagepull-demo.yaml  ingress-bad-backend-demo.yaml  namespace.yaml  network-policy-demo.yaml  oomkilled-demo.yaml  service-no-endpoints-demo.yaml
docs/: USER_GUIDE.md  medium-tr-kind-ai-kube-agent.md  troubleshooting-scenarios.md
k8s/: configmap.yaml  deployment-ecr.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  rbac.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
scripts/: cleanup_demo.sh  deploy_agent.sh  deploy_demo_broken_apps.sh  l_test.sh  local_run.sh  local_test.sh  port_forward_dashboard.sh
tests/: test_ai_client.py  test_ai_prompt.py  test_fingerprint.py  test_masking.py  test_rule_engine.py  test_scanner.py
youtube/: 00-BENI-OKU.md  01-Konusma-Notlari.md  02-Demo-Runbook.md  AI-K8s-Agent-Sunum.pptx  build_deck.py
