[project]
name = "ai-kubernetes-troubleshooting-agent"
version = "0.1.0"
description = "Kubernetes troubleshooting agent with local rules and Pioneer AI analysis."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

